<resources>
    <string name="app_name">Thesis1</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="form">Form</string>
    <string name="goal">Goal</string>
    <string name="money">$$$</string>
    <string name="time">Time</string>
    <string name="category">Category</string>
    <string name="location">Location</string>
    <string name="receipt">Receipt</string>
    <string name="camera">Camera</string>
    <string name="comments">Comments</string>
    <string name="saveLabel">Save</string>
</resources>
